Added zero padding

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 {% block content %}
 	{% if username %}
 		{% if running %}There is currently a session running.{% else %}There is no session running at the moment.{% endif %}<br>
-		You have {{ hours }}:{{ minutes }} left today.
+		You have {{ hours }}:{{ minutes }}:{{ seconds }} left today.
 	{% endif %}
 {% endblock %}
