--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,7 @@
 		<a href="/reset">Reset time</a><br>
 		<a href="/settime">Set time</a><br>
 		<a href="/config">Configurate allowed times</a>
+	{% else %}
+		You need to log in to use the web interface.
 	{% endif %}
 {% endblock %}
