--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <form action="/register" method="post">
-Username: <input type="text" name="username"><br>
-Password: <input type="password" name="password"><br>
+<table>
+<tr><td>Username</td><td><input type="text" name="username"></td></tr>
+<tr><td>Password</td><td><input type="password" name="password"></td></tr>
+</table><br>
 <input type="submit" value="Register">
 {% endblock %}
