--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <form action="/login" method="post">
-Username: <input type="text" name="username"><br>
-Password: <input type="password" name="password"><br>
+<table>
+<tr><td>Username</td><td><input type="text" name="username"></td></tr>
+<tr><td>Password</td><td><input type="password" name="password"></td></tr>
+</table><br>
 <input type="submit" value="Login">
 </form>
 {% endblock %}
