Index and time page refresh every 10 seconds

--- a/templates/time.html
+++ b/templates/time.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
+<meta http-equiv="refresh" content="10" />
 You have {{ hours }}:{{ minutes }}:{{ seconds }} left today.
 {% endblock %}
