--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block content %}
 	{% if username %}
 		{% if running %}There is currently a session running.{% else %}There is no session running at the moment.{% endif %}<br>
+		<meta http-equiv="refresh" content="10" />
 		You have {{ hours }}:{{ minutes }}:{{ seconds }} left today.<br><br>
 		<a href="/reset">Reset time</a><br>
 		<a href="/settime">Set time</a><br>
